updated package.json file

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project for storing postman API tests",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "api-tests-dev": "newman run postman_collection.json -e postman_environment.json"
   },
   "repository": {
     "type": "git",
