corrected the script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Project for storing postman API tests",
   "main": "index.js",
   "scripts": {
-    "api-tests-dev": "newman run postman_collection.json -e postman_environment.json"
+    "api-tests-dev": "newman run postman_collection.json"
   },
   "repository": {
     "type": "git",
